--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,10 @@ landingai==0.3.8
 Pillow==10.2.0
 numpy==1.26.3
 
+# FAISS & Embeddings
+faiss-cpu==1.7.4
+sentence-transformers==2.3.1
+
 # Environment & Config
 python-dotenv==1.0.0
 pyyaml==6.0.1
