feat: integrate Crew AI for multi-agent workflow orchestration
- Add crewai and crewai-tools to requirements.txt
- Create crew_workflow.py with 3 specialized AI agents:
  * Referral Validation Specialist
  * Caregiver Matching Specialist
  * Compliance & Documentation Specialist
- Configure Crew AI to use Swarms API (OpenAI-compatible)
- Add crew_ai configuration section in agent_config.yaml
- Implement execution history tracking and statistics
- Support sequential agent workflow with monitoring

--- a/backend/config/agent_config.yaml
+++ b/backend/config/agent_config.yaml
@@ -63,3 +63,24 @@ workflow:
   enable_parallel_processing: false
   max_retry_attempts: 3
   timeout_seconds: 30
+
+# Crew AI Configuration
+crew_ai:
+  llm:
+    model: "gpt-4o"  # Swarms model to use
+    temperature: 0.7
+    base_url: "https://api.swarms.world/v1"
+  
+  scoring:
+    city_match_points: 40
+    exact_skill_match_points: 40
+    general_skill_match_points: 20
+    flexible_availability_points: 20
+    partial_availability_points: 10
+  
+  thresholds:
+    max_matches_returned: 3
+  
+  monitoring:
+    max_history_size: 100
+    verbose: true
